updated website login

--- a/templates/login.html
+++ b/templates/login.html
@@ -16,8 +16,8 @@
 
 
 
-    <form method="post">
-        <div class="myform">
+    <form class="myform" method = "POST">
+
 
             <div class="form-group">
 
@@ -67,11 +67,13 @@
 
             </div>
 
-        </div>
+
+
+     <p><br> <br> <br> If you don't have an account please <a href="/signup">Sign up</a>.</p>
+     <div class = "error">{{ error }}</div>
 
     </form>
 
-    <p><br> <br> <br> If you don't have an account please <a href="/signup">Sign up</a>.</p>
 
 
 
