--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
                 <a href="/">Home</a>
                 <a href="/menu">Menu</a>
                 <a href="/contact">Contact</a>
-                <a href="/login">Login</a>
+                <a href={{ logged_in[0] }}>{{ logged_in[1] }}</a>
 
             </div>
 
