--- a/templates/signup.html
+++ b/templates/signup.html
@@ -77,7 +77,7 @@
 
                 <div class = "form-element">
 
-                        <input type = "password" name = "password" id = "password2" required>
+                        <input type = "password" name = "password" id = "password" required>
 
                 </div>
 
@@ -94,11 +94,15 @@
 
                 <div class = "form-element">
 
-                        <input type = "password" name = "password" id = "password2" required>
+                        <input type = "password" name = "password2" id = "password2" required>
 
                 </div>
 
+
+
             </div>
+
+            <div class = "error">{{ error }}</div>
 
             <div class="form-group">
 
