--- a/templates/login.html
+++ b/templates/login.html
@@ -14,8 +14,6 @@
     </div>
 
 
-
-
     <form class="myform" method = "POST">
 
 
@@ -29,7 +27,7 @@
 
                 <div class="form-element">
 
-                    <input type="email" name="email" id="email" required>
+                    <input type="email" name="email" id="email" required value = {{ details[0] }}>
 
                 </div>
 
@@ -46,7 +44,7 @@
 
                 <div class="form-element">
 
-                    <input type="password" name="password" id="password" required>
+                    <input type="password" name="password" id="password" required value={{ details[1] }}>
 
                 </div>
 
@@ -70,7 +68,7 @@
 
 
      <p><br> <br> <br> If you don't have an account please <a href="/signup">Sign up</a>.</p>
-     <div class = "error">{{ error }}</div>
+        <div class = "error"> <strong> {{ error }} </strong> </div>
 
     </form>
 
