--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,7 +27,7 @@
 
                 <div class = "form-element">
 
-                        <input type = "text" name = "fname" id = "fname" required>
+                        <input type = "text" name = "fname" id = "fname" required value = {{ details[0] }}>
 
                 </div>
 
@@ -44,7 +44,7 @@
 
                 <div class = "form-element">
 
-                        <input type = "text" name = "lname" id = "lname" required>
+                        <input type = "text" name = "lname" id = "lname" required  value = {{ details[1] }}>
 
                 </div>
 
@@ -60,7 +60,7 @@
 
                 <div class = "form-element">
 
-                        <input type = "email" name = "email" id = "email" required>
+                        <input type = "email" name = "email" id = "email" required  value = {{ details[2] }}>
 
                 </div>
 
@@ -77,7 +77,7 @@
 
                 <div class = "form-element">
 
-                        <input type = "password" name = "password" id = "password" required>
+                        <input type = "password" name = "password" id = "password" required  value = {{ details[3] }}>
 
                 </div>
 
@@ -94,7 +94,7 @@
 
                 <div class = "form-element">
 
-                        <input type = "password" name = "password2" id = "password2" required>
+                        <input type = "password" name = "password2" id = "password2" required  value = {{ details[4] }}>
 
                 </div>
 
@@ -102,7 +102,7 @@
 
             </div>
 
-            <div class = "error">{{ error }}</div>
+            <div class = "error"> <strong> {{ error }} </strong> </div>
 
             <div class="form-group">
 
