started working on database system and ordering for products

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,9 @@
                 <a href="/">Home</a>
                 <a href="/menu">Menu</a>
                 <a href="/contact">Contact</a>
-                {% if logged_in %}
 
+                {% if logged_in %}
+                    <a href = "/cart">Cart</a>
                     <a href="/logout">Log out</a>
 
                 {% else %}
